@@ -1,3 +1,7 @@
+2013-01-26  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar (bell): block recursion
+
 2012-12-26  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtdata.h, avtdata.c: don't use anonymous union
